# treegrep

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  todos.md  todos.norg
.github/workflows/: ci.yml  cr.yml  test.yml  update_readme  update_readme.yml  update_readme_and_completions.yml
benchmarks/: runner  times
benchsuite/: runner  times
completions/: _tgrep  _tgrep.ps1  tgrep.bash  tgrep.elv  tgrep.fish
doc/: tgrep.nvim.txt  treegrep.nvim.txt  treegrep.vim9.txt
lua/: tgrep.lua  treegrep.lua
plugin/: treegrep.el  treegrep.vim
src/: args.rs  args_menu.rs  config.rs  errors.rs  formats.rs  log.rs  main.rs  match_system.rs  matcher.rs  menu.rs  options.rs  output_processor.rs  searchers.rs  select_menu.rs  style.rs  term.rs  writer.rs
tests/: file_system.rs  tests.rs  tmux.rs  utils.rs
tests/pool/: alice_adventures_in_wonderland_by_lewis_carroll.txt
tests/targets/: colon  context_a1  context_b1  context_c1  count  deep  escapes  file  files_1  files_2  files_long_branch_1  files_long_branch_2  files_long_branch_expr_1  files_long_branch_expr_2  files_long_branch_expr_count_1  files_long_branch_expr_count_2  files_with_expr  glob_exclusion  glob_inclusion  line_number  links  links_1  links_11  links_12  links_2  links_21  links_22  links_3  links_4  links_linux  max_depth  menu_custom_keys  menu_filter  menu_jump_1  menu_jump_2  menu_navigate_1  menu_navigate_2  menu_search_mode  overlapping  overlapping_rg  (+10 more)
