[package]
name = "treegrep"
version = "2.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/4imothy/treegrep"
homepage = "https://github.com/4imothy/treegrep"
keywords = ["regex", "grep", "search", "tree"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
description = "regex pattern matcher that displays results in a tree structure with an interface to jump to matched text"
documentation = "https://github.com/4imothy/treegrep/tree/main/README.md"
authors = ["Timothy Cronin"]
include = [
"/src"
]
autotests = false

[[bin]]
name = "tgrep"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[features]
test = []
overwrite = ["test"]

[dependencies]
crossterm = {version = "0.29.0", features = ["use-dev-tty"]}
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
dunce = "1.0.5"
ignore = "0.4.26"
grep = "0.4.1"
regex = "1.12.4"
signal-hook = "0.4.4"
shlex = "2.0.1"
crossbeam-channel = "0.5"
